--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}">
+<html class="h-100" lang="{{ .Site.LanguageCode }}">
 
   <head>
     {{ partial "headers.html" . }}
   </head>
 
-  <body>
+  <body class="d-flex flex-column h-100">
 
-    <div id="all">
+    <main class="flex-shrink-0">
         {{ partial "nav.html" . }}
 
         {{ partial "breadcrumbs.html" . }}
@@ -17,9 +17,9 @@
         {{ partial "features.html" . }}
 
         {{ partial "who_is_trax.html" . }}
+    </main>
 
-        {{ partial "footer.html" . }}
-    </div>
+    {{ partial "footer.html" . }}
     <!-- /#all -->
 
     {{ partial "scripts.html" . }}
