--- a/layouts/shortcodes/become-member.html
+++ b/layouts/shortcodes/become-member.html
@@ -1,17 +1,17 @@
 {{ $steps := sort .Site.Data.membership.steps "weight" "asc" }}
 {{ $steps_len := len $steps }}
 
-{{ range $i, $sequence := seq $steps_len }}
-<div class="row row-{{ $i }} row-{{ if eq (mod $i 2) 0 }}odd{{ else }}even{{ end }}">
+<div>
+    {{ range $i, $sequence := seq $steps_len }}
     {{ range $j, $sequence2 := (seq $steps_len) }}
 
     {{ $step_index := add (mul $i $steps_len) $j }}
     {{ if lt $step_index (len $steps) }}
     {{ $step := index $steps $step_index }}
-    <div class="p-2 d-flex justify-content-center col-md-{{ div 12 1 }}">
+    <div class="p-2 d-flex justify-content-center row">
         {{ if eq (mod $j 2) 0 }}
-        <div class="p-2 col-md-1 my-auto">
-            <img class="img-fluid d-block" src="{{ $step.icon_url | absURL }}" alt="">
+        <div class="p-2 col-md-1 my-auto img-row-div">
+            <img class="img-fluid d-block"src="{{ $step.icon_url | absURL }}" alt="">
         </div>
         <div class="p-2 col-md-6">
             <h5 class="card-title">{{ $step.title | safeHTML }}</h5>
@@ -24,7 +24,7 @@
             <h5 class="card-title">{{ $step.title | safeHTML }}</h5>
             <p class="card-text">{{ $step.description | safeHTML }}</p>
         </div>
-        <div class="p-2 col-md-1 my-auto">
+        <div class="p-2 col-md-1 my-auto img-row-div">
             <img class="img-fluid d-block" src="{{ $step.icon_url | absURL }}" alt="">
         </div>
         {{ end }}
