--- a/static/css/style.trax.css
+++ b/static/css/style.trax.css
@@ -223,13 +223,7 @@
   }
   @media (max-width: 991px) {
     .navbar-brand img {
-      display: none;
-    }
-    .navbar-brand {
-      padding: 0;
-      margin: 0;
-      height: 0;
-      width: 0;
+     max-height: 50px;
     }
     .navbar ul.nav > li.active > a,
     .navbar ul.nav > li > a:hover {
