Open new tab on "become a member" buttons

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,7 @@
           <br>
           Click "Become a member" beloew and follow the steps.
         </p>
-        <a href="/membership/" class="btn btn-m3-tertiary btn-lg gap-3">Become a member</a>
+        <a href="/membership/" class="btn btn-m3-tertiary btn-lg gap-3" target="_blank" rel="noopener noreferrer">Become a member</a>
       </div>
     </div>
     </div>
