--- a/layouts/shortcodes/not_a_member.html
+++ b/layouts/shortcodes/not_a_member.html
@@ -4,7 +4,7 @@
       <p class="lead mb-4">
         To get access to a makerspace you must first become a member.
       </p>
-      <a href="/membership/" class="btn btn-m3-tertiary btn-lg gap-3">Become a member</a>
+      <a href="/membership/" class="btn btn-m3-tertiary btn-lg gap-3" target="_blank" rel="noopener noreferrer">Become a member</a>
     </div>
 </div>
 <br>
