--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -37,7 +37,7 @@
           <ul class="list-unstyled mb-0">
             {{ range $link := sort .Site.Data.footer.contact_us "weight" }}
             <li>
-              <a href="{{ $link.title }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">{{ $link.title }}</a>
+              <a href="{{ $link.url }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">{{ $link.title }}</a>
             </li>
             {{ end }}
           </ul>
