--- a/layouts/shortcodes/makerspace-cards.html
+++ b/layouts/shortcodes/makerspace-cards.html
@@ -1,7 +1,7 @@
-{{ $makerspaces := sort .Site.Data.makerspace "weight" }}
+{{ $makerspaces := sort .Site.Data.makerspace.card "weight" }}
 {{ $elements := (len $makerspaces) }}
 {{ $total_rows := div (len $makerspaces) $elements }}
-{{ $cards_per_row := default 3 $.Site.Params.makerspace.cards_per_row }}
+{{ $cards_per_row := default 3 $.Site.Params.makerspace.card.cards_per_row }}
 
 <div class="text-center">
   <h1 class="fw-bold text-body-emphasis">Overview</h1>
