Major refactoring of makerspace doc pages
Show courses tied to a makerspace
Show course material tied to a makerspace
All course material is available on document page
All courses are available on course & event page

--- a/layouts/shortcodes/document-cards.html
+++ b/layouts/shortcodes/document-cards.html
@@ -22,8 +22,10 @@
       <div class="card-body">
         <h5 class="card-title">{{ $docs_member.name }} [{{ $docs_member.language }}]</h5>
         <p class="card-subtitle">{{ $docs_member.date }}</p>
+        {{ with $docs_member.description }}
+        <p class="card-text">{{ . }}</p>
+        {{ end }}
         {{ with $docs_member.url }}
-        
         <a href="{{ $docs_member.url }}">
             <i class="fa-sharp fa-regular fa-file-pdf" alt="Document icon"></i>
             Download
