--- a/static/css/style.trax.css
+++ b/static/css/style.trax.css
@@ -346,3 +346,21 @@
     --bs-btn-disabled-bg: var(--md-sys-color-tertiary-container);
     --bs-btn-disabled-border-color: var(--md-sys-color-tertiary-container);
   }
+
+  /* Arrow icon */
+  .arrow {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+  }
+  
+  .right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+
+  .disabled-card-img {
+    opacity: 0.2;
+  }
+  
