Fixed a typo in index.html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,7 +25,7 @@
             <p class="lead mb-4">
               The first step of gaining access to a makerspace is becoming a member.
               <br>
-              Click "Become a member" beloew and follow the steps.
+              Click "Become a member" below and follow the steps.
             </p>
             <a href="/membership/" class="btn btn-m3-tertiary btn-lg gap-3" target="_blank"
               rel="noopener noreferrer">Become a member</a>
