Added chalmers student union logo in sponsors.html

--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -12,6 +12,13 @@
       <img src="{{ $element.thumbnail_url | relURL }}" alt="{{ $element.name | relURL }}" class="p-3 img-fluid" />
       {{ end }}
     </div>
+    <br>
+    <div class="col-md-12">
+      <h1>A part of</h1>
+    </div>
+    <div class="p-3 justify-content-center">
+    <img src="img/sponsors/CHS-standard-black.png">
+  </div>
   </div>
 </section>
 
