Fixed logo for kåren in sponsors.html

--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -17,7 +17,7 @@
       <h1>A part of</h1>
     </div>
     <div class="p-3 justify-content-center">
-    <img src="img/sponsors/CHS-standard-black.png">
+    <img src="img/sponsors/CHS-standard-black.png" class="p-3 img-fluid">
   </div>
   </div>
 </section>
