Changed canvas steps in steps.yaml

--- a/layouts/shortcodes/makerspace-cards.html
+++ b/layouts/shortcodes/makerspace-cards.html
@@ -44,7 +44,7 @@
         
         {{ with $element.url }}
         <a href="{{ $element.url }}" 
-          class="btn btn-m3-tertiary d-flex justify-content-center {{ if $element.under_construction }} disabled {{ end }}">Go to makerspace</a>
+          class="btn btn-m3-tertiary d-flex justify-content-center {{ if $element.under_construction }} disabled {{ end }}">Go to workshop</a>
         {{ end }}
       </div>
     </div>
