--- a/layouts/shortcodes/makerspace-courses-and-events.html
+++ b/layouts/shortcodes/makerspace-courses-and-events.html
@@ -1,4 +1,5 @@
 {{ $courses := .Site.Data.courses_and_events.data.courses }}
+{{ $info := .Site.Data.courses_and_events.data.info }}
 
 <div class="text-center">
   <h1 class="fw-bold text-body-emphasis"></h1>
@@ -7,7 +8,13 @@
     </p>
   </div>
 </div>
-
+<div>
+  {{range $info}}
+  <h5>
+    {{ .information | safeHTML  }}
+  </h5>
+  {{end}}
+</div>
 <table class="table table-hover">
   <thead class="thead-dark">
     <tr>
