--- a/layouts/shortcodes/makerspace-courses-and-events.html
+++ b/layouts/shortcodes/makerspace-courses-and-events.html
@@ -2,6 +2,8 @@
 {{ $info := .Site.Data.courses_and_events.data.info }}
 
 <style>
+  @media (min-width: 800px){
+
     .twoblocks-container {
         display: flex; 
         gap: 1rem; 
@@ -14,6 +16,7 @@
     .Courses{
       flex: 2;
     }
+  }
 
 </style>
 <br>
