--- a/layouts/shortcodes/makerspace-courses-and-events.html
+++ b/layouts/shortcodes/makerspace-courses-and-events.html
@@ -83,7 +83,7 @@
   <iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=2&ctz=Europe%2FStockholm&bgcolor=%23F6BF26&showPrint=0&showTabs=0&showCalendars=0&showTz=0&title&src=Y182Zjg5YTg1MmRmNDQ5ZGRhN2MwYjhhMzgyMDJmMjA1ZmY2N2RlODYxYWJhNDdmYjI4ODY3Y2ZhNmM5ZWZjNTExQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=aW5mb0B0LXJheC5zZQ&color=%23F6BF26&color=%23C0CA33" 
   style="border-width:0; box-shadow:  0 0px 20px rgba(0, 0, 0, 0.3);" 
   width="500" 
-  height="500" f
+  height="500" 
   rameborder="0" 
   scrolling="no"></iframe></div>
 <br><br>
