Different fixes and added text to workshops about

--- a/layouts/shortcodes/makerspace-cards.html
+++ b/layouts/shortcodes/makerspace-cards.html
@@ -8,13 +8,17 @@
   <h1 class="fw-bold text-body-emphasis">Overview</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">
-      In FUSE lab there are multiple makerspaces available to our
-      members.<br>
+      In the FUSE lab there are multiple workshops available to our members.<br> 
+      
+      If you are interested in a workshop, 
+      follow its link for information on what that workshop offers 
+      and what experience and machine access you will get from attending its course. 
+      Access to the fusebox, 
+      all group rooms and the hand tools in the rapid workshop are all 
+      included in the common access available to all members
 
-      If you are interested in a makerspace, follow its link for 
-      information on what that makerspace offers, what experience 
-      you will get from attending its course, and what is required to
-      gain access to its area.<br><br>
+      
+      <br><br>
     </p>
   </div>
 </div>
@@ -59,13 +63,13 @@
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">
       Pages that are labeled <tt>{{ $under_construction_text }}</tt> will be available soon.
-      This label does not reflect the state of the makerspace, only the state of
+      This label does not reflect the state of the workshop, only the state of
       its page. <br><br>
 
-      We are continiously trying to update the pages to make them as accurate as
+      We are continuously trying to update the pages to make them as accurate as
       possible. If you find any inaccurate information or any link broken on these
       pages please contact <tt>admin@t-rax.se</tt>.<br><br>
-      For general questions about the makerspaces,
+      For general questions about the workshops,
       please refer to the contact information on the bottom of the page.
     </p>
   </div>
