--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,7 @@
           <h1 class="">Not a member?</h1>
           <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">
-              The first step of gaining access to a makerspace is becoming a member.
+              The first step of gaining access to a workshops is becoming a member.
               <br>
               Click "Become a member" below and follow the steps.
             </p>
