--- a/layouts/shortcodes/not_a_member.html
+++ b/layouts/shortcodes/not_a_member.html
@@ -2,7 +2,7 @@
     <h1 class="fw-bold text-body-emphasis">Not a member?</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">
-        To get access to a makerspace you must first become a member.
+        To get access to a workshop you must first become a member.
       </p>
       <a href="/membership/" class="btn btn-m3-tertiary btn-lg gap-3" target="_blank" rel="noopener noreferrer">Become a member</a>
     </div>
