Added questions to FAQ in data.yaml

--- a/layouts/shortcodes/inspiration.html
+++ b/layouts/shortcodes/inspiration.html
@@ -2,7 +2,7 @@
     <h1 class="fw-bold text-body-emphasis">Overview</h1>
     <p class="lead mb-4">This page will serve as a inperation page for our members. 
         <br> Do you have a cool project that you want to feature on our website? 
-    <br> Please contact us at info@chalmers.se</p>
+    <br> Please contact us at <b>info@chalmers.se</b></p>
 <div class="gallery">
     {{ range readDir "static/img/inspoimages" }}
 
