--- a/layouts/shortcodes/faq.html
+++ b/layouts/shortcodes/faq.html
@@ -1,11 +1,66 @@
 {{ $q := .Site.Data.questions.data.questions }}
 
-{{ range $q := sort $q "weight" }}
-<div>
-    <h1 class="col-md-12">{{ $q.question}}</h1>
-</div>
-<div>
-    <p class="lead mb-4">{{$q.answer | safeHTML}}</p>
+<h1>Have any questions?</h1>
 
+
+<div class="container">
+    <div class="row">
+        {{ range $q := sort $q "weight" }}
+        <div class="col-md-6">
+            <h2 class="col-md-12">
+                <button class="collapsible">
+                    {{ $q.question}}
+                </button>
+                <div class="content">
+                    <p class="lead mb-4">{{$q.answer | safeHTML}}</p>
+                
+                </div>
+            </h2>
+        </div>
+        {{ end }}
+    </div>
 </div>
-{{end}}
+
+
+
+<script>
+    var coll = document.getElementsByClassName("collapsible");
+    var i;
+    
+    for (i = 0; i < coll.length; i++) {
+      coll[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var content = this.nextElementSibling;
+        if (content.style.display === "block") {
+          content.style.display = "none";
+        } else {
+          content.style.display = "block";
+        }
+      });
+    }
+    </script>
+
+<style>
+    .collapsible {
+      background-color: #777;
+      color: white;
+      cursor: pointer;
+      padding: 18px;
+      width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+    }
+    
+    .collapsible:hover {
+      background-color: #777;
+    }
+    
+    .content {
+      padding: 0 18px;
+      display: none;
+      overflow: hidden;
+      background-color: #f1f1f1;
+    }
+</style>
